Use compact object headers