@@ -14,3 +14,5 @@
 -Dfile.encoding=UTF-8
 # Allow loading dynamic agent used by JOL
 -XX:+EnableDynamicAgentLoading
+-XX:+UnlockExperimentalVMOptions
+-XX:+UseCompactObjectHeaders
